interceptor update, more migration to ngrx, cleanup